# safaricom-mcp-server

./: README.md
adk_agent_safaricom_mcp_access/: Dockerfile
adk_agent_safaricom_mcp_access/safaricom_mcp_access_greeter/: agent.py  requirements.txt
decode/: README.md
decode/01-mpesa-daraja-mcp-server-with-apigee/mpesa-mcp-server/: .env.example  .gitignore  DEPLOY_NOTES.md  Dockerfile  LOCAL_RUN.md  README.md  products.json  pyproject.toml  requirements.txt  server.py
decode/02-google-adk-agent-for-mpesa-daraja-mcp/: 11_congratulations.md
